add header layout, common styles config, breakpoin-sass

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,7 +1,8 @@
+@import "../../node_modules/breakpoint-sass/stylesheets/_breakpoint.scss"
 @import "imports/_reset.scss"
 @import "imports/_var.sass"
 @import "imports/_grid.sass"
 
-
+@import "imports/common.sass"
 //page parts
 @import "imports/_header.sass"
