--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,3 +46,164 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 a {
   text-decoration: none;
 }
+
+body {
+  font: 300 16px "Oswald", sans-serif;
+  color: #fff;
+}
+
+.main-header {
+  padding: 10px 15px;
+  background-color: #009700;
+}
+
+.main-header__wrap {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.main-header__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.main-header__middle {
+  min-height: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+@media (max-width: 768px) {
+  .main-header__middle {
+    min-height: 100px;
+  }
+}
+
+.main-header__bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 20px;
+}
+
+@media (max-width: 768px) {
+  .main-header__bottom {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+}
+
+.connect-action {
+  margin-left: auto;
+}
+
+.connect-action__item {
+  color: #fff;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+}
+
+.connect-action__item:hover {
+  text-decoration: underline;
+}
+
+.site-name {
+  font: 700 70px "Oswald", sans-serif;
+}
+
+@media (max-width: 768px) {
+  .site-name {
+    font-size: 30px;
+  }
+}
+
+.main-navigation__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+@media (max-width: 768px) {
+  .main-navigation__wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+}
+
+.main-navigation__item {
+  padding: 0 15px;
+}
+
+.main-navigation__item:first-child, .main-navigation__item:last-child {
+  padding: 0;
+}
+
+.main-navigation__link {
+  position: relative;
+  padding-bottom: 5px;
+  font: 300 20px "Oswald", sans-serif;
+  color: #fff;
+}
+
+.main-navigation__link:hover:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: inline-block;
+  background-color: #fff;
+  width: 100%;
+  height: 1px;
+}
+
+.social-links {
+  margin-left: auto;
+}
+
+@media (max-width: 768px) {
+  .social-links {
+    margin: auto;
+    padding: 15px 0 0 0;
+  }
+}
+
+.social-links__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.social-links__item {
+  padding: 0 3px;
+}
+
+.social-links__item:last-child {
+  padding-right: 0;
+}
+
+.social-links__link svg {
+  width: 35px;
+  height: 35px;
+  fill: #fff;
+}
