--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,8 +1,10 @@
 @import "../../node_modules/breakpoint-sass/stylesheets/_breakpoint.scss"
 @import "imports/_reset.scss"
+@import "imports/_mixins.sass"
 @import "imports/_var.sass"
 @import "imports/_grid.sass"
 
 @import "imports/common.sass"
 //page parts
 @import "imports/_header.sass"
+@import "imports/_home.sass"
