--- a/src/sass/imports/_var.sass
+++ b/src/sass/imports/_var.sass
@@ -16,8 +16,7 @@ $main-green: #009700
 	//Grid Settings
 //-------*/
 $columns: 12
-$gutters: 0
-$math: fluid
+$gutters: 2%
 $container-width: 960px
 $container-min-width: 320px
 
@@ -36,9 +35,3 @@ $lg: min-width 1200px // Large
 
 @function to-bool($value)
 	@return not ($value or $value == "" or $value == 0 or $value == ())
-
-@mixin clearfix
-	&:after
-		content: ""
-		display: table
-		clear: both
