--- a/src/sass/imports/common.sass
+++ b/src/sass/imports/common.sass
@@ -7,3 +7,6 @@ body
     font-size: $base-font-size - 2px
   @include breakpoint($xxs)
     font-size: $base-font-size - 3px
+
+img
+  max-width: 100%
