--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -8,3 +8,5 @@
 //page parts
 @import "imports/_header.sass"
 @import "imports/_home.sass"
+@import "imports/_elements.sass"
+@import "imports/_footer.sass"
