--- a/src/sass/imports/_header.sass
+++ b/src/sass/imports/_header.sass
@@ -1,6 +1,12 @@
 .main-header
+  position: absolute
+  top: 0
+  width: 100%
   padding: 10px 15px
   background-color: $main-green
+  &--sticky
+    position: fixed
+    top: 0
   &__wrap
     max-width: $container-width
     margin: 0 auto
@@ -38,11 +44,15 @@
     font-size: 30px
 
 .main-navigation
+  &--align-right
+    text-align: right
   &__wrap
     display: flex
     align-items: center
     @include breakpoint($xs)
       flex-direction: column
+    &--inline
+      display: inline-flex
   &__item
     padding: 0 15px
     &:first-child,
@@ -50,6 +60,7 @@
       padding: 0
   &__link
     position: relative
+    display: block
     padding-bottom: 5px
     font: 300 20px $base-font
     color: #fff
