--- a/templates/layouts/layout.twig
+++ b/templates/layouts/layout.twig
@@ -5,13 +5,15 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="apple-touch-icon-precomposed" href="/img/eco-green-bicycle-icon-152-170402.png">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Welcome to my blog</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <title>{{ page_title }} -- Roman Sliusar travel blog</title>
 </head>
 <body>
     {% block header %}
-        <header class="main-header">
+        <header class="main-header {% if (global.header_mod) %} main-header--sticky main-header--sticky-default {% endif %}">
             <div class="main-header__wrap">
                 <div class="main-header__top">
                     <div class="logo">
@@ -25,16 +27,18 @@
                         <a href="#" class="connect-action__item connect-action__sing-up">Sing up</a>
                     </div>
                 </div>
-                <div class="main-header__middle">
-                    <div class="site-name">
-                        <p>REVOLVER LAB</p>
+                {% if global.header_mod != 1 %}
+                    <div class="main-header__middle">
+                        <div class="site-name">
+                            <p>{{ global.site_name }}</p>
+                        </div>
                     </div>
-                </div>
+                {% endif %}
                 <div class="main-header__bottom">
                     <nav class="main-navigation">
                         <ul class="main-navigation__wrap">
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link">Головна</a>
+                                <a href="/" class="main-navigation__link">Головна</a>
                             </li>
                             <li class="main-navigation__item">
                                 <a href="#" class="main-navigation__link">Категорії постів</a>
@@ -63,12 +67,35 @@
                             </li>
                         </ul>
                     </div>
-                </div
+                </div>
             </div>
         </header>
     {% endblock %}
     {% block body %}
         <h1>It's text that be on all pages</h1>
+    {% endblock %}
+    {% block footer %}
+        <footer class="main-footer">
+            <div class="main-footer__wrap container">
+                <nav class="main-navigation main-navigation--align-right">
+                    <ul class="main-navigation__wrap main-navigation__wrap--inline">
+                        <li class="main-navigation__item">
+                            <a href="#" class="main-navigation__link">Головна</a>
+                        </li>
+                        <li class="main-navigation__item">
+                            <a href="#" class="main-navigation__link">Категорії постів</a>
+                        </li>
+                        <li class="main-navigation__item">
+                            <a href="#" class="main-navigation__link">Про мене</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </footer>
+    {% endblock %}
+    {% block scripts %}
+        <script src="/js/libs.min.js"></script>
+        <script src="/js/common.js"></script>
     {% endblock %}
 </body>
 </html>
